<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/add_workers_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:background="@drawable/background_clickable_text_view"
        android:drawableStart="@drawable/ic_add_button"
        android:drawablePadding="16dp"
        android:gravity="center_vertical"
        android:paddingHorizontal="8dp"
        android:paddingVertical="8dp"
        android:text="@string/add_workers_btn_label"
        android:textAppearance="@style/Text.H5"
        android:textColor="@color/blue"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/workers_recycler"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="12dp"
        android:clipToPadding="false"
        android:paddingHorizontal="24dp"
        android:paddingTop="8dp"
        android:paddingBottom="64dp"
        app:layout_constraintBottom_toTopOf="@id/save_btn"
        app:layout_constraintTop_toBottomOf="@id/add_workers_btn" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/back_btn"
        style="@style/OutlinedButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="@string/btn_back_label"
        app:layout_constraintBottom_toBottomOf="@id/save_btn"
        app:layout_constraintEnd_toStartOf="@id/save_btn"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/save_btn"
        style="@style/Button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginBottom="24dp"
        android:text="@string/btn_next_label"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/back_btn" />

</androidx.constraintlayout.widget.ConstraintLayout>
